# src/swagger/swagger.json
@@ -70,6 +70,40 @@
               }
             }
         },
+        "put": {
+            "description": "Rename file",
+            "tags": [
+              "File"
+            ],
+            "parameters": [
+              {
+                "name": "srcPath",
+                "in": "query",
+                "required": true,
+                "type": "string"
+              },
+              {
+                "name": "destPath",
+                "in": "query",
+                "required": true,
+                "type": "string"
+              }
+            ],
+            "responses": {
+              "200": {
+                "description": "Successful operation",
+                "schema": {
+                    "$ref": "#/definitions/OPStatus"
+                  }
+              },
+              "500": {
+                "description": "Error",
+                "schema": {
+                  "$ref": "#/definitions/OPStatus"
+                }
+              }
+            }
+        },
         "post": {
             "description": "Upload file",
             "tags": [
@@ -136,7 +170,7 @@
       },
       "/api/file/newFolder": {
         "get": {
-          "description": "Returns meta data about the path passed in params",
+          "description": "Create new Folder",
           "tags": [
             "File"
           ],
